[features]: stable dl and wqi calculations
